--- a/linkedin.html
+++ b/linkedin.html
@@ -171,7 +171,7 @@
           window.open("instagram.com", '_blank').focus(); //Add the url to your instagram account
         }
         else if (id === "linkedin") {
-          window.open("https://www.linkedin.com/", '_blank').focus(); //Add the url to your pinterest account
+          window.open("https://www.linkedin.com/company/98050268/admin/feed/posts//", '_blank').focus(); //Add the url to your pinterest account
         }
         else if (id === "twitter") {
           window.open("https://twitter.com/", '_blank').focus(); //Add the url to your pinterest account
