--- a/socials.html
+++ b/socials.html
@@ -182,13 +182,13 @@
           window.open("https://blog.shorouk.dev", '_blank').focus(); //Add the url to your blog
 
         else if (id === "email") {
-          window.open("mailto:someone@yoursite.com", '_blank').focus(); //Add your email after "mailto:""
+          window.open("mailto:SustainSearch@gmail.com", '_blank').focus(); //Add your email after "mailto:""
         }
         else if (id === "facebook") {
           window.open("https://facebook.com/", '_blank').focus(); //Add the url to your facebook page or account
         }
         else if (id === "instagram") {
-          window.open("instagram.com", '_blank').focus(); //Add the url to your instagram account
+          window.open("https://www.instagram.com/sustainsearch/", '_blank').focus(); //Add the url to your instagram account
         }
         else if (id === "linkedin") {
           window.open("https://www.linkedin.com/company/98050268/admin/feed/posts//", '_blank').focus(); //Add the url to your pinterest account
@@ -200,7 +200,7 @@
           window.open("https://www.reddit.com/", '_blank').focus(); //Add the url to your reddit account
         }
         else if (id === "tiktok") {
-          window.open("https://www.tiktok.com/", '_blank').focus(); //Add the url to your tiktok account
+          window.open("https://www.tiktok.com/@sustainsearch?lang=en&is_from_webapp=1&sender_device=mobile&sender_web_id=7102447872276284934/", '_blank').focus(); //Add the url to your tiktok account
         }
         else if (id === "youtube") {
           window.open("https://www.youtube.com/", '_blank').focus(); //Add the url to your youtube account
