--- a/social.html
+++ b/social.html
@@ -188,7 +188,7 @@
           window.open("https://facebook.com/", '_blank').focus(); //Add the url to your facebook page or account
         }
         else if (id === "instagram") {
-          window.open("https://www.instagram.com/sustainsearch/", '_blank').focus(); //Add the url to your instagram account
+          window.open("https://www.instagram.com/sustainsearch//", '_blank').focus(); //Add the url to your instagram account
         }
         else if (id === "linkedin") {
           window.open("https://www.linkedin.com/company/98050268/admin/feed/posts//", '_blank').focus(); //Add the url to your pinterest account
